# OOP_MAI_LABS

./: README.md
Lab1/: CMakeLists.txt
Lab1/include/: format_time.h
Lab1/src/: format_time.cpp  main.cpp
Lab1/test/: test_format_time.cpp
